Fix multiple issues & WiP on tests
